--- a/assets/scss/_about-info.scss
+++ b/assets/scss/_about-info.scss
@@ -4,6 +4,7 @@
 // About-Info Starts Here
 .about-info {
   position: relative;
+  padding-top: 20px;
   &-image {
     margin-left: -190px;
   }
