--- a/assets/scss/_callto-action.scss
+++ b/assets/scss/_callto-action.scss
@@ -4,7 +4,8 @@
 .callto-action {
   background-color: rgba(255, 70, 94, 0.05);
   margin: 0 45px;
-  margin-top: 90px;
+  padding: 0px;
+  padding-top: 30px;
   border-radius: 24px;
   position: relative;
   &-mask {
@@ -28,17 +29,17 @@
   }
 
   &-text {
+    margin-top: -50px;
     h2 {
       font-family: $gilroy-bold;
       max-width: 620px;
-      margin-bottom: 12px;
     }
 
     p {
       max-width: 575px;
       font-family: $gilroy-medium;
-      margin-bottom: 20px;
       line-height: 30px;
+      margin: 20px 0px;
     }
     .primary__button {
       margin-top: 30px;
