--- a/assets/scss/_special-services.scss
+++ b/assets/scss/_special-services.scss
@@ -2,6 +2,8 @@
 /*  HOMEPAGE 01
 /*----------------------------------------*/
 .special-services {
+  padding-top: 0px;
+  padding-bottom: 75px;
   .section-title {
     h2 {
       font-size: 48px;
